# osop

./: .gitignore  LICENSE  README.md  pyproject.toml
osop/: __init__.py  __main__.py  agent_invoker.py  imitation.py  live_log.py  replayer.py
osop/cli/: __init__.py  main.py
osop/ir/: models.py
osop/parser/: loader.py
osop/recorder/: __init__.py  transcript.py
osop/renderers/: debug.py  role.py  story.py
osop/reporters/: __init__.py  html.py  text.py
osop/validator/: schema_validator.py
tests/: test_agent_replay.py  test_cli.py  test_ir.py  test_live_log.py  test_loader.py  test_record_replay_loop.py  test_renderers.py  test_replayer.py  test_schema_conformance.py  test_schema_validator.py  test_validate.py
tests/fixtures/: cli_chain.osop.yaml  cli_chain_with_failure.osop.yaml  invalid_yaml.osop  missing_fields.osop  valid_complex.osop  valid_minimal.json  valid_minimal.osop
