[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "osop"
version = "0.1.0"
description = "OSOP CLI runtime — validate, run, render, test"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["osop", "workflow", "process", "ai", "agent"]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
osop = "osop.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Archie0125/osop"
Specification = "https://github.com/Archie0125/osop-spec"

[tool.setuptools.packages.find]
where = ["."]
