[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osop"
version = "0.1.0"
description = "OSOP — Open Standard Operating Procedures. CLI and runtime for defining, validating, and executing process workflows."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "OSOP Contributors", email = "hello@osop.ai" },
]
keywords = ["workflow", "process", "automation", "sop", "osop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
osop = "osop.cli.main:cli"

[project.urls]
Homepage = "https://osop.ai"
Documentation = "https://osop.ai/docs"
Repository = "https://github.com/osop/osop"
Issues = "https://github.com/osop/osop/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
